Fix Tables overflow the chart container (114)
This commit will solve issue #114.

--- a/srcd/superset/assets/stylesheets/less/custom-brand.less
+++ b/srcd/superset/assets/stylesheets/less/custom-brand.less
@@ -224,10 +224,6 @@ h4.panel-title {
   border-bottom: 4px solid @brand-secondary;
 }
 
-.chart-header .header {
-  margin-bottom: 20px;
-}
-
 .dropdown-menu {
   font-family: "Source Sans Pro", "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
